<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_game_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableSound"
            android:persistent="true"
            android:summaryOff="@string/preference_enable_sound_summary"
            android:summaryOn="@string/preference_enable_sound_summary"
            android:title="@string/preference_enable_sound" />

        <PreferenceScreen
            xmlns:replica="http://schemas.android.com/apk/res/com.w3i.torch"
            android:key="controlConfigScreen"
            android:title="@string/preference_configure_controls" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enableClickAttack"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_click_attack_summary"
                android:summaryOn="@string/preference_enable_click_attack_summary"
                android:title="@string/preference_enable_click_attack" />

            <com.w3i.torch.KeyboardConfigDialogPreference
                android:dialogLayout="@layout/key_config"
                android:dialogTitle="@string/preference_key_config_dialog_title"
                android:key="keyconfig"
                android:negativeButtonText="@string/preference_key_config_dialog_cancel"
                android:positiveButtonText="@string/preference_key_config_dialog_ok"
                android:summary="@string/preference_key_config_summary"
                android:title="@string/preference_key_config"
                replica:attackKey="keyAttack"
                replica:jumpKey="keyJump"
                replica:leftKey="keyLeft"
                replica:rightKey="keyRight" />

            <com.w3i.torch.SliderPreference
                android:defaultValue="100"
                android:key="movementSensitivity"
                android:persistent="true"
                android:summary="@string/preference_movement_sensitivity_summary"
                android:title="@string/preference_movement_sensitivity"
                replica:maxText="@string/preference_movement_max"
                replica:minText="@string/preference_movement_min" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="enableScreenControls"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_screen_controls_summary"
                android:summaryOn="@string/preference_enable_screen_controls_summary"
                android:title="@string/preference_enable_screen_controls" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="enableScreenControls"
                android:key="enableTiltControls"
                android:persistent="true"
                android:summaryOff="@string/preference_enable_tilt_controls_summary"
                android:summaryOn="@string/preference_enable_tilt_controls_summary"
                android:title="@string/preference_enable_tilt_controls" />

            <com.w3i.torch.SliderPreference
                android:defaultValue="50"
                android:dependency="enableTiltControls"
                android:key="tiltSensitivity"
                android:persistent="true"
                android:summary="@string/preference_tilt_sensitivity_summary"
                android:title="@string/preference_tilt_sensitivity"
                replica:maxText="@string/preference_tilt_max"
                replica:minText="@string/preference_tilt_min" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="safeMode"
            android:persistent="true"
            android:summaryOff="@string/preference_safe_mode_summary"
            android:summaryOn="@string/preference_safe_mode_summary"
            android:title="@string/preference_safe_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_save_game" >
        <com.w3i.torch.YesNoDialogPreference
            android:dialogMessage="@string/preference_erase_save_game_dialog"
            android:dialogTitle="@string/preference_erase_save_game_dialog_title"
            android:key="erasegame"
            android:negativeButtonText="@string/preference_erase_save_game_dialog_cancel"
            android:positiveButtonText="@string/preference_erase_save_game_dialog_ok"
            android:title="@string/preference_erase_save_game" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enableStats"
            android:persistent="true"
            android:summaryOff="@string/preference_enable_statistics_summary"
            android:summaryOn="@string/preference_enable_statistics_summary"
            android:title="@string/preference_enable_statistics" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_debug" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enableDebug"
            android:persistent="true"
            android:summaryOff="@string/preference_enable_debug_summary"
            android:summaryOn="@string/preference_enable_debug_summary"
            android:title="@string/preference_enable_debug" />
    </PreferenceCategory>

</PreferenceScreen>