<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <ImageView
        android:id="@+id/mainMenuBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/default_image_view_description"
        android:gravity="right"
        android:scaleType="fitXY"
        android:src="@drawable/ui_main_menu_background"
        android:tint="#30FFFFFF" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/game_results_title"
            android:textColor="#AAFFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_pearls_collected"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <view
                android:id="@+id/pearl_percent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                class="com.recharge.torch.activities.GameOverActivity$IncrementingTextView"
                android:gravity="right"
                android:text="@string/game_over_pearl_percent"
                android:textColor="#AAFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_robots_destroyed"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <view
                android:id="@+id/enemy_percent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                class="com.recharge.torch.activities.GameOverActivity$IncrementingTextView"
                android:gravity="right"
                android:text="@string/game_over_enemy_percent"
                android:textColor="#AAFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_total_play_time"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <view
                android:id="@+id/total_play_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                class="com.recharge.torch.activities.GameOverActivity$IncrementingTextView"
                android:gravity="right"
                android:text="@string/game_over_total_play_time"
                android:textColor="#AAFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_results_ending"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/ending"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="right"
                android:text="@string/game_results_kabocha_ending"
                android:textColor="#AAFFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/game_results_unlocks_message"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <TextView
        android:id="@+id/ui_game_over_tap_to_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:minHeight="70dip"
        android:text="@string/tap_here_to_continue"
        android:textSize="22sp" />

</FrameLayout>